# mediapipe

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Deps.cmake  Helpers.cmake
mediapipe/framework/: CMakeLists.txt
mediapipe/framework/port/: CMakeLists.txt
